--- a/packages/ppbgdi/data_stream/mf_chsdi3_logs/elasticsearch/ingest_pipeline/default.yml
+++ b/packages/ppbgdi/data_stream/mf_chsdi3_logs/elasticsearch/ingest_pipeline/default.yml
@@ -27,3 +27,8 @@ processors:
       description: Process url query
       if: ctx?.url?.query != null && ctx?.url?.query != ""
       name: '{{ IngestPipeline "url-query" }}'
+
+on_failure:
+  - append:
+      field: error.message
+      value: '{{ _ingest.on_failure_message }}'
