PB-428 changed _id to .id field name

--- a/packages/ppbgdi/data_stream/mf_chsdi3_logs/elasticsearch/ingest_pipeline/url-query.yml
+++ b/packages/ppbgdi/data_stream/mf_chsdi3_logs/elasticsearch/ingest_pipeline/url-query.yml
@@ -4,12 +4,12 @@ processors:
   - kv:
       description: Parse url query parameters to an object
       field: url.query
-      target_field: bgdi.app.query_params
+      target_field: ppbgdi.app.query_params
       field_split: "&"
       value_split: "="
   - foreach:
       description: Lowercase all query parameter keys for easier handling
-      field: bgdi.app.query_params
+      field: ppbgdi.app.query_params
       processor:
         lowercase:
           field: _ingest._key
