--- a/packages/ppbgdi/data_stream/service_stac_logs/elasticsearch/ingest_pipeline/url-path.yml
+++ b/packages/ppbgdi/data_stream/service_stac_logs/elasticsearch/ingest_pipeline/url-path.yml
@@ -16,9 +16,9 @@ processors:
         STAC_COLLECTIONS_ENDPOINT: "(?<ppbgdi.app.stac.endpoint>collections)"
         STAC_CONFORMANCE_ENDPOINT: "(?<ppbgdi.app.stac.endpoint>conformance)"
         STAC_SEARCH_ENDPOINT: "(?<ppbgdi.app.stac.endpoint>search)"
-        STAC_COLLECTION: "/(?<ppbgdi.app.stac.collection_id>[^/]+)"
-        STAC_FEATURE: "/(?<ppbgdi.app.stac.feature_id>[^/]+)"
-        STAC_ASSET: "/(?<ppbgdi.app.stac.asset_id>[^/]+)"
+        STAC_COLLECTION: "/(?<ppbgdi.app.stac.collection.id>[^/]+)"
+        STAC_FEATURE: "/(?<ppbgdi.app.stac.feature.id>[^/]+)"
+        STAC_ASSET: "/(?<ppbgdi.app.stac.asset.id>[^/]+)"
         STAC_UPLOAD_ID: "/(?<ppbgdi.app.stac.upload.id>[^/]+)"
         STAC_UPLOAD_OPTION: "/(?<ppbgdi.app.stac.upload.option>abort|complete|parts)"
 
