--- a/packages/ppbgdi/data_stream/service_stac_logs/fields/entity-stac.yml
+++ b/packages/ppbgdi/data_stream/service_stac_logs/fields/entity-stac.yml
@@ -7,13 +7,13 @@
         - name: endpoint
           type: keyword
           description: The STAC endpoint
-        - name: collection_id
+        - name: collection.id
           type: keyword
           description: The id of the STAC collection
-        - name: feature_id
+        - name: feature.id
           type: keyword
           description: The id of the STAC feature/item
-        - name: asset_id
+        - name: asset.id
           type: keyword
           description: The id of the STAC asset/object
         - name: upload.id
