--- a/packages/ppbgdi/data_stream/mf_chsdi3_logs/elasticsearch/ingest_pipeline/elastic-package-test.yml
+++ b/packages/ppbgdi/data_stream/mf_chsdi3_logs/elasticsearch/ingest_pipeline/elastic-package-test.yml
@@ -1,5 +1,5 @@
 ---
-description: Pipeline for processing json logs
+description: Pipeline to mock up logs in test environment
 processors:
   - rename:
       field: message
