--- a/packages/ppbgdi/data_stream/mf_chsdi3_logs/fields/common-fields.yml
+++ b/packages/ppbgdi/data_stream/mf_chsdi3_logs/fields/common-fields.yml
@@ -9,6 +9,18 @@
       object_type: keyword
       description: |
         The canonical query-parameters of the monitored http request.
+    - name: feature.id
+      type: keyword
+      description: The id/name of the feature
+    - name: endpoint.id
+      type: keyword
+      description: The id/name of the endpoint
+    - name: layer.id
+      type: keyword
+      description: The id/name of the topic
+    - name: topic.id
+      type: keyword
+      description: The id/name of the layer
 - name: http.request.headers.*
   type: keyword
   description: Not yet but already in use ecs fields
