--- a/packages/ppbgdi/data_stream/mf_chsdi3_logs/elasticsearch/ingest_pipeline/common.yml
+++ b/packages/ppbgdi/data_stream/mf_chsdi3_logs/elasticsearch/ingest_pipeline/common.yml
@@ -6,6 +6,11 @@ processors:
       patterns:
         - "^\\[%{TIMESTAMP_ISO8601:@timestamp}\\] \\[%{DATA:log.level}\\] \\[pid/tid %{POSINT:process.pid}/%{POSINT:process.thread.id}\\] \\[%{DATA:log.logger}\\] \\[ID %{NOTSPACE:event.id}\\] %{GREEDYDATA:message}"
         - "^\\[%{TIMESTAMP_ISO8601:@timestamp}\\] \\[%{DATA:log.level}\\] \\[pid/tid %{POSINT:process.pid}/%{POSINT:process.thread.id}\\] \\[%{DATA:log.logger}\\] \\[ID %{NOTSPACE:event.id} %{GREEDYDATA:message}"
+        - "^\\[%{TIMESTAMP_MF_CHSDI3:temp.timestamp}\\] \\[%{DATA:log.logger}:%{DATA:log.level}\\] \\[pid %{POSINT:process.pid}:tid %{POSINT:process.thread.id}\\] %{GREEDYDATA:message}$"
+      pattern_definitions:
+        TIMESTAMP_MF_CHSDI3: "%{DAY} %{MONTH} %{MONTHDAY} %{TIME} %{YEAR}" # Thu May 02 15:44:34.030551 2024
+      trace_match: true
+      ecs_compatibility: v1
   - convert:
       field: process.pid
       type: long
@@ -14,8 +19,15 @@ processors:
       field: process.thread.id
       type: long
       ignore_missing: true
-
+  - date:
+      field: temp.timestamp
+      formats:
+        - EEE MMM dd H:m:s.SSSSSS yyyy
+      if: ctx?.temp?.timestamp != null
 on_failure:
+  - set:
+      field: event.kind
+      value: pipeline_error
   - append:
       field: error.message
       value: '{{ _ingest.on_failure_message }}'
