PB-428: Added event.kind

--- a/packages/ppbgdi/data_stream/mf_chsdi3_logs/elasticsearch/ingest_pipeline/default.yml
+++ b/packages/ppbgdi/data_stream/mf_chsdi3_logs/elasticsearch/ingest_pipeline/default.yml
@@ -36,6 +36,9 @@ processors:
       name: '{{ IngestPipeline "url-query" }}'
 
 on_failure:
+  - set:
+      field: event.kind
+      value: pipeline_error
   - append:
       field: error.message
       value: '{{ _ingest.on_failure_message }}'
