--- a/packages/ppbgdi/data_stream/python_logs/elasticsearch/ingest_pipeline/entity-layer.yml
+++ b/packages/ppbgdi/data_stream/python_logs/elasticsearch/ingest_pipeline/entity-layer.yml
@@ -6,6 +6,9 @@ processors:
       target_field: ppbgdi.app.layer
       ignore_missing: true
 on_failure:
-- append:
-    field: error.message
-    value: '{{ _ingest.on_failure_message }}'
+  - set:
+      field: event.kind
+      value: pipeline_error
+  - append:
+      field: error.message
+      value: '{{ _ingest.on_failure_message }}'
