--- a/packages/ppbgdi/data_stream/mf_chsdi3_logs/elasticsearch/ingest_pipeline/elastic-package-test.yml
+++ b/packages/ppbgdi/data_stream/mf_chsdi3_logs/elasticsearch/ingest_pipeline/elastic-package-test.yml
@@ -18,6 +18,9 @@ processors:
       inline: ctx?.tags.removeIf(item -> item == 'elastic-package-test')
 
 on_failure:
+  - set:
+      field: event.kind
+      value: pipeline_error
   - append:
       field: error.message
       value: '{{ _ingest.on_failure_message }}'
