--- a/packages/ppbgdi/data_stream/mf_chsdi3_logs/elasticsearch/ingest_pipeline/url-path.yml
+++ b/packages/ppbgdi/data_stream/mf_chsdi3_logs/elasticsearch/ingest_pipeline/url-path.yml
@@ -8,12 +8,6 @@ processors:
       replacement: ""
   - grok:
       field: url.path
-      pattern_definitions:
-        MF_CHSDI3_TOPIC: "(?<ppbgdi.app.topic.id>[^/]+)"
-        MF_CHSDI3_LAYER: "(?<ppbgdi.app.layer.id>ch[^/]+)" # To avoid problems, assume features start with ch. To be improve if exceptions pop up.
-        MF_CHSDI3_FEATURE: "(?<ppbgdi.app.feature.id>[^/]+)"
-        MF_CHSDI3_LAYERSCONFIG_ENDPOINT: "(?<ppbgdi.app.endpoint.id>layersConfig)"
-
       patterns:
         - '^/rest/services/%{MF_CHSDI3_TOPIC}/MapServer$' # Layers Metadata
         - '^/rest/services/%{MF_CHSDI3_TOPIC}/MapServer/identify$' # Identify Features
@@ -22,6 +16,11 @@ processors:
         - '^/rest/services/%{MF_CHSDI3_TOPIC}/MapServer/%{MF_CHSDI3_LAYER}/legend$' # Legend Resource
         - '^/rest/services/%{MF_CHSDI3_TOPIC}/MapServer/%{MF_CHSDI3_LAYER}/%{MF_CHSDI3_FEATURE}$' # Feature Resource
         - '^/rest/services/%{MF_CHSDI3_TOPIC}/MapServer/%{MF_CHSDI3_LAYER}/%{MF_CHSDI3_FEATURE}/htmlPopup$' # Htmlpopup Resource
+      pattern_definitions:
+        MF_CHSDI3_TOPIC: "(?<ppbgdi.app.topic.id>[^/]+)"
+        MF_CHSDI3_LAYER: "(?<ppbgdi.app.layer.id>ch[^/]+)" # To avoid problems, assume features start with ch. To be improve if exceptions pop up.
+        MF_CHSDI3_FEATURE: "(?<ppbgdi.app.feature.id>[^/]+)"
+        MF_CHSDI3_LAYERSCONFIG_ENDPOINT: "(?<ppbgdi.app.endpoint.id>layersConfig)"
       trace_match: true
       ecs_compatibility: v1
       on_failure:
@@ -56,6 +55,9 @@ processors:
       ignore_missing: true
 
 on_failure:
-- append:
-    field: error.message
-    value: '{{ _ingest.on_failure_message }}'
+  - set:
+      field: event.kind
+      value: pipeline_error
+  - append:
+      field: error.message
+      value: '{{ _ingest.on_failure_message }}'
