--- a/packages/ppbgdi/data_stream/python_logs/elasticsearch/ingest_pipeline/common-json.yml
+++ b/packages/ppbgdi/data_stream/python_logs/elasticsearch/ingest_pipeline/common-json.yml
@@ -212,7 +212,10 @@ processors:
       ignore_missing: true
 
 on_failure:
-- append:
-    field: error.message
-    value: '{{ _ingest.on_failure_message }}'
+  - set:
+      field: event.kind
+      value: pipeline_error
+  - append:
+      field: error.message
+      value: '{{ _ingest.on_failure_message }}'
 
