--- a/packages/ppbgdi/data_stream/service_wms_logs/elasticsearch/ingest_pipeline/default.yml
+++ b/packages/ppbgdi/data_stream/service_wms_logs/elasticsearch/ingest_pipeline/default.yml
@@ -51,6 +51,9 @@ processors:
 
 
 on_failure:
-- append:
-    field: error.message
-    value: '{{ _ingest.on_failure_message }}'
+  - set:
+      field: event.kind
+      value: pipeline_error
+  - append:
+      field: error.message
+      value: '{{ _ingest.on_failure_message }}'
