PB-428: Added mf-chsdi3 checker endpoint

--- a/packages/ppbgdi/data_stream/mf_chsdi3_logs/elasticsearch/ingest_pipeline/url-path.yml
+++ b/packages/ppbgdi/data_stream/mf_chsdi3_logs/elasticsearch/ingest_pipeline/url-path.yml
@@ -9,6 +9,7 @@ processors:
   - grok:
       field: url.path
       patterns:
+        - '^/checker' # Checker
         - '^/rest/services/%{MF_CHSDI3_TOPIC}/MapServer$' # Layers Metadata
         - '^/rest/services/%{MF_CHSDI3_TOPIC}/MapServer/identify$' # Identify Features
         - '^/rest/services/%{MF_CHSDI3_TOPIC}/MapServer/find$' # Find
@@ -39,6 +40,7 @@ processors:
         ctx['ppbgdi.app.endpoint.id'] = params['endpoint_names'][ctx?.temp?.endpoint_index];
       params:
         endpoint_names:
+          - checker
           - layers_metadata
           - identify
           - find
