--- a/packages/ppbgdi/data_stream/mf_chsdi3_logs/elasticsearch/ingest_pipeline/url-path.yml
+++ b/packages/ppbgdi/data_stream/mf_chsdi3_logs/elasticsearch/ingest_pipeline/url-path.yml
@@ -9,6 +9,9 @@ processors:
   - grok:
       field: url.path
       patterns:
+        # Patterns are based on the API documentation: https://api3.geo.admin.ch/services/sdiservices.html
+        # In order to set the endpoint names by a following processor, each pattern in the list below
+        # must only match one specific endpoint.
         - '^/checker' # Checker
         - '^/rest/services/%{MF_CHSDI3_TOPIC}/MapServer$' # Layers Metadata
         - '^/rest/services/%{MF_CHSDI3_TOPIC}/MapServer/identify$' # Identify Features
@@ -17,12 +20,14 @@ processors:
         - '^/rest/services/%{MF_CHSDI3_TOPIC}/MapServer/%{MF_CHSDI3_LAYER}/legend$' # Legend Resource
         - '^/rest/services/%{MF_CHSDI3_TOPIC}/MapServer/%{MF_CHSDI3_LAYER}/%{MF_CHSDI3_FEATURE}$' # Feature Resource
         - '^/rest/services/%{MF_CHSDI3_TOPIC}/MapServer/%{MF_CHSDI3_LAYER}/%{MF_CHSDI3_FEATURE}/htmlPopup$' # Htmlpopup Resource
+        - '^/rest/services/%{MF_CHSDI3_TOPIC}/MapServer/layersConfig$' # Layers configuration
+        - '^/rest/services/%{MF_CHSDI3_TOPIC}/CatalogServer$' # Topic catalog
       pattern_definitions:
         MF_CHSDI3_TOPIC: "(?<ppbgdi.app.topic.id>[^/]+)"
-        MF_CHSDI3_LAYER: "(?<ppbgdi.app.layer.id>ch[^/]+)" # To avoid problems, assume features start with ch. To be improve if exceptions pop up.
+        MF_CHSDI3_LAYER: "(?<ppbgdi.app.layer.id>ch\\.[^/]+)" # To avoid problems, assume features start with ch. To be improve if exceptions pop up.
         MF_CHSDI3_FEATURE: "(?<ppbgdi.app.feature.id>[^/]+)"
         MF_CHSDI3_LAYERSCONFIG_ENDPOINT: "(?<ppbgdi.app.endpoint.id>layersConfig)"
-      trace_match: true
+      trace_match: true # Adds the index of the matching pattern to _ingest._grok_match_index. Used to set endpoint names
       ecs_compatibility: v1
       on_failure:
         - append:
@@ -48,6 +53,8 @@ processors:
           - legend_resource
           - feature_resource
           - htmlpopup_resource
+          - layers_configuration
+          - topic_catalog
       if: ctx?.temp?.endpoint_index != null
   - dot_expander:
       description: Convert ppbgdi.app.endpoint.id into an object field
