PB-428: Added /rest/services endpoint to chsdi3

--- a/packages/ppbgdi/data_stream/mf_chsdi3_logs/elasticsearch/ingest_pipeline/url-path.yml
+++ b/packages/ppbgdi/data_stream/mf_chsdi3_logs/elasticsearch/ingest_pipeline/url-path.yml
@@ -22,6 +22,7 @@ processors:
         - '^/rest/services/%{MF_CHSDI3_TOPIC}/MapServer/%{MF_CHSDI3_LAYER}/%{MF_CHSDI3_FEATURE}/htmlPopup$' # Htmlpopup Resource
         - '^/rest/services/%{MF_CHSDI3_TOPIC}/MapServer/layersConfig$' # Layers configuration
         - '^/rest/services/%{MF_CHSDI3_TOPIC}/CatalogServer$' # Topic catalog
+        - '^/rest/services$' # Services catalog
       pattern_definitions:
         MF_CHSDI3_TOPIC: "(?<ppbgdi.app.topic.id>[^/]+)"
         MF_CHSDI3_LAYER: "(?<ppbgdi.app.layer.id>ch\\.[^/]+)" # To avoid problems, assume features start with ch. To be improve if exceptions pop up.
@@ -55,6 +56,7 @@ processors:
           - htmlpopup_resource
           - layers_configuration
           - topic_catalog
+          - services_catalog
       if: ctx?.temp?.endpoint_index != null
   - dot_expander:
       description: Convert ppbgdi.app.endpoint.id into an object field
