--- a/packages/ppbgdi/data_stream/mf_chsdi3_logs/elasticsearch/ingest_pipeline/default.yml
+++ b/packages/ppbgdi/data_stream/mf_chsdi3_logs/elasticsearch/ingest_pipeline/default.yml
@@ -24,7 +24,7 @@ processors:
       name: '{{ IngestPipeline "common" }}'
   - pipeline:
       description: Process url path
-      if: ctx?.url?.path != null && ctx?.url?.path != ""
+      if: ctx?.url?.path != null && ctx?.url?.path != "" && ctx?.url?.path != "/"
       name: '{{ IngestPipeline "url-path" }}'
   - remove:
       field:
