--- a/packages/ppbgdi/data_stream/mf_chsdi3_logs/fields/common-fields.yml
+++ b/packages/ppbgdi/data_stream/mf_chsdi3_logs/fields/common-fields.yml
@@ -15,9 +15,18 @@
     - name: endpoint.id
       type: keyword
       description: The id/name of the endpoint
+    - name: image.id
+      type: keyword
+      description: The id/name of the image
     - name: layer.id
       type: keyword
       description: The id/name of the topic
+    - name: legend.id
+      type: keyword
+      description: The id/name of the legend
+    - name: vector_style.id
+      type: keyword
+      description: The id/name of the vector style
     - name: topic.id
       type: keyword
       description: The id/name of the layer
