--- a/packages/ppbgdi/data_stream/service_stac_logs/elasticsearch/ingest_pipeline/url-path.yml
+++ b/packages/ppbgdi/data_stream/service_stac_logs/elasticsearch/ingest_pipeline/url-path.yml
@@ -31,6 +31,9 @@ processors:
         - '^/api/stac/%{STAC_VERSION}/%{STAC_SEARCH_ENDPOINT}$'
         - '^/api/stac/%{STAC_ADMIN_ENDPOINT}'
       on_failure:
+        - set:
+            field: event.kind
+            value: pipeline_error
         - append:
             field: error.message
             value: 'Processor {{{_ingest.on_failure_processor_type}}} with tag fail-{{{_ingest.on_failure_processor_tag}}} in pipeline {{{_ingest.pipeline}}} failed with message: {{{_ingest.on_failure_message}}}'
