--- a/packages/ppbgdi/data_stream/service_stac_logs/fields/entity-stac.yml
+++ b/packages/ppbgdi/data_stream/service_stac_logs/fields/entity-stac.yml
@@ -4,7 +4,7 @@
     - name: stac
       type: group
       fields:
-        - name: endpoint
+        - name: endpoint.id
           type: keyword
           description: The STAC endpoint
         - name: collection.id
