PB-428: Converted mf-chsdi3 feature.id to list

--- a/packages/ppbgdi/data_stream/mf_chsdi3_logs/elasticsearch/ingest_pipeline/url-path.yml
+++ b/packages/ppbgdi/data_stream/mf_chsdi3_logs/elasticsearch/ingest_pipeline/url-path.yml
@@ -107,7 +107,11 @@ processors:
   - remove:
       field: temp
       ignore_missing: true
-
+  - split:
+      field: ppbgdi.app.feature.id
+      separator: ","
+      preserve_trailing: true
+      ignore_missing: true
 on_failure:
   - set:
       field: event.kind
