--- a/packages/ppbgdi/data_stream/mf_chsdi3_logs/fields/common-fields.yml
+++ b/packages/ppbgdi/data_stream/mf_chsdi3_logs/fields/common-fields.yml
@@ -11,7 +11,7 @@
         The canonical query-parameters of the monitored http request.
     - name: feature.id
       type: keyword
-      description: The id/name of the feature
+      description: List of id/s,name/s of the feature/s
     - name: endpoint.id
       type: keyword
       description: The id/name of the endpoint
