--- a/packages/ppbgdi/data_stream/service_wms_logs/elasticsearch/ingest_pipeline/query-params.yml
+++ b/packages/ppbgdi/data_stream/service_wms_logs/elasticsearch/ingest_pipeline/query-params.yml
@@ -23,6 +23,14 @@ processors:
       field: temp.query_params.crs
       pattern: "EPSG:%{ppbgdi.app.epsg}"
       ignore_missing: true
+      on_failure:
+        - append:
+            field: tags
+            value: crs_value_error
+        - append:
+            field: error.message
+            value: 'Invalid crs value: {{{temp.query_params.crs}}}'
+
   - remove:
       field: temp.query_params.crs
       ignore_missing: true
